--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=9090
+logging.level.com.example.springapp=DEBUG
+logging.level.org.springframework.web=DEBUG
+server.port=9092
